# aw-server-rust

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.webui  QUICKSTART.md  README.md  docker-compose.yml
aidlc-docs/: aidlc-state-webui.md  aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  (+5 more)
aidlc-docs/fixes/: bucket-creation-idempotency-fix.md  bucket-metadata-null-safety-fix.md  bucket-page-null-daterange-fix.md  flood-negative-gap-threshold-fix.md  route-forwarding-warning-analysis.md  timeline-group-labels-html-fix.md  timeline-keyboard-option-fix.md  timeline-queriedinterval-null-fix.md
aw-datastore/: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  TEST_RESULTS_FINAL.md  docker-compose.test.yml  run_tests.sh
aw-datastore/.github/: CI_CD.md
aw-datastore/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
aw-datastore/.github/workflows/: benchmark.yml  coverage.yml  test.yml
aw-datastore/src/: datastore_pg.rs  health.rs  legacy_import.rs  lib.rs  metrics.rs  migrations.rs  retry.rs  worker.rs
aw-datastore/tests/: datastore.rs  test_datastore_integration.rs  test_health.rs  test_metrics.rs  test_migrations.rs  test_retry.rs
aw-query/: Cargo.toml
aw-query/src/: functions.rs
aw-server/: Cargo.toml
aw-server/src/: config.rs  main.rs
aw-transform/src/: flood.rs
aw-webui/: .dockerignore  .gitignore  README-CUSTOMIZATION.md  index.html  vue.config.js
docker/: init-db.sh  nginx.conf  postgresql.conf
scripts/: backup-database.sh  diagnose-overlaps.py  restore-database.sh
(+39 files in other folders)
